--- a/packages.bib
+++ b/packages.bib
@@ -232,6 +232,14 @@ in Environmental Sciences},
   url = {https://github.com/gregfrog/brew},
 }
 
+@Manual{R-brio,
+  title = {brio: Basic R Input Output},
+  author = {Jim Hester and Gábor Csárdi},
+  year = {2024},
+  note = {R package version 1.1.5},
+  url = {https://brio.r-lib.org},
+}
+
 @Manual{R-broom,
   title = {broom: Convert Statistical Objects into Tidy Tibbles},
   author = {David Robinson and Alex Hayes and Simon Couch},
@@ -288,6 +296,14 @@ in Environmental Sciences},
   url = {https://github.com/topepo/caret/},
 }
 
+@Manual{R-caTools,
+  title = {caTools: Tools: Moving Window Statistics, GIF, Base64, ROC AUC, etc},
+  author = {Jarek Tuszynski},
+  year = {2024},
+  note = {R package version 1.18.3},
+  url = {https://CRAN.R-project.org/package=caTools},
+}
+
 @Manual{R-cellranger,
   title = {cellranger: Translate Spreadsheet Cell Ranges to Rows and Columns},
   author = {Jennifer Bryan},
@@ -323,8 +339,8 @@ in Environmental Sciences},
 @Manual{R-cli,
   title = {cli: Helpers for Developing Command Line Interfaces},
   author = {Gábor Csárdi},
-  year = {2024},
-  note = {R package version 3.6.3},
+  year = {2025},
+  note = {R package version 3.6.4},
   url = {https://cli.r-lib.org},
 }
 
@@ -402,6 +418,14 @@ al.},
   url = {https://conflicted.r-lib.org/},
 }
 
+@Manual{R-coro,
+  title = {coro: Coroutines for R},
+  author = {Lionel Henry},
+  year = {2024},
+  note = {R package version 1.1.0},
+  url = {https://github.com/r-lib/coro},
+}
+
 @Manual{R-corrplot,
   title = {corrplot: Visualization of a Correlation Matrix},
   author = {Taiyun Wei and Viliam Simko},
@@ -432,6 +456,14 @@ al.},
   year = {2024},
   note = {R package version 1.5.3},
   url = {https://r-lib.github.io/crayon/},
+}
+
+@Manual{R-credentials,
+  title = {credentials: Tools for Managing SSH and Git Credentials},
+  author = {Jeroen Ooms},
+  year = {2024},
+  note = {R package version 2.0.2},
+  url = {https://docs.ropensci.org/credentials/},
 }
 
 @Manual{R-crosstalk,
@@ -544,6 +576,14 @@ binomial distribution},
   url = {https://github.com/plfjohnson/devEMF},
 }
 
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.4.5},
+  url = {https://devtools.r-lib.org/},
+}
+
 @Manual{R-diagram,
   title = {diagram: Functions for Visualising Simple Graphs (Networks), Plotting
 Flow Diagrams},
@@ -551,6 +591,14 @@ Flow Diagrams},
   year = {2020},
   note = {R package version 1.6.5},
   url = {https://CRAN.R-project.org/package=diagram},
+}
+
+@Manual{R-diffobj,
+  title = {diffobj: Diffs for R Objects},
+  author = {Brodie Gaslam},
+  year = {2021},
+  note = {R package version 0.3.5},
+  url = {https://github.com/brodieG/diffobj},
 }
 
 @Manual{R-digest,
@@ -584,6 +632,14 @@ Flow Diagrams},
   note = {R package version 4.0.0},
   url = {https://bioconductor.org/packages/DOSE},
   doi = {10.18129/B9.bioc.DOSE},
+}
+
+@Manual{R-downlit,
+  title = {downlit: Syntax Highlighting and Automatic Linking},
+  author = {Hadley Wickham},
+  year = {2024},
+  note = {R package version 0.4.4},
+  url = {https://downlit.r-lib.org/},
 }
 
 @Manual{R-dplyr,
@@ -627,6 +683,22 @@ Theory Group (Formerly: E1071), TU Wien},
   url = {https://CRAN.R-project.org/package=e1071},
 }
 
+@Manual{R-ellipsis,
+  title = {ellipsis: Tools for Working with ...},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 0.3.2},
+  url = {https://ellipsis.r-lib.org},
+}
+
+@Manual{R-ellmer,
+  title = {ellmer: Chat with Large Language Models},
+  author = {Hadley Wickham and Joe Cheng and Aaron Jacobs},
+  year = {2025},
+  note = {R package version 0.1.1},
+  url = {https://ellmer.tidyverse.org},
+}
+
 @Manual{R-enrichplot,
   title = {enrichplot: Visualization of Functional Enrichment Result},
   author = {Guangchuang Yu},
@@ -634,6 +706,14 @@ Theory Group (Formerly: E1071), TU Wien},
   note = {R package version 1.26.6},
   url = {https://bioconductor.org/packages/enrichplot},
   doi = {10.18129/B9.bioc.enrichplot},
+}
+
+@Manual{R-eulerr,
+  title = {eulerr: Area-Proportional Euler and Venn Diagrams with Ellipses},
+  author = {Johan Larsson},
+  year = {2024},
+  note = {R package version 7.0.2},
+  url = {https://github.com/jolars/eulerr},
 }
 
 @Manual{R-evaluate,
@@ -883,6 +963,22 @@ them to follow a particular naming style},
   doi = {10.18129/B9.bioc.GenomicRanges},
 }
 
+@Manual{R-GenSA,
+  title = {GenSA: R Functions for Generalized Simulated Annealing},
+  author = {Sylvain Gubian and Yang Xiang and Brian Suomela and Julia Hoeng and PMP SA.},
+  year = {2024},
+  note = {R package version 1.1.14.1},
+  url = {https://CRAN.R-project.org/package=GenSA},
+}
+
+@Manual{R-gert,
+  title = {gert: Simple Git Client for R},
+  author = {Jeroen Ooms},
+  year = {2024},
+  note = {R package version 2.1.4},
+  url = {https://docs.ropensci.org/gert/},
+}
+
 @Manual{R-ggforce,
   title = {ggforce: Accelerating ggplot2},
   author = {Thomas Lin Pedersen},
@@ -990,12 +1086,36 @@ ggplot2},
   doi = {10.18129/B9.bioc.ggtree},
 }
 
+@Manual{R-ggvenn,
+  title = {ggvenn: Draw Venn Diagram by ggplot2},
+  author = {Linlin Yan},
+  year = {2025},
+  note = {R package version 0.1.16},
+  url = {https://yanlinlin82.github.io/ggvenn/},
+}
+
 @Manual{R-ggVennDiagram,
   title = {ggVennDiagram: A ggplot2 Implement of Venn Diagram},
   author = {Chun-Hui Gao and Adrian Dusa},
   year = {2024},
   note = {R package version 1.5.2},
   url = {https://github.com/gaospecial/ggVennDiagram},
+}
+
+@Manual{R-gh,
+  title = {gh: GitHub 'API'},
+  author = {Jennifer Bryan and Hadley Wickham},
+  year = {2024},
+  note = {R package version 1.4.1},
+  url = {https://gh.r-lib.org/},
+}
+
+@Manual{R-gitcreds,
+  title = {gitcreds: Query git Credentials from R},
+  author = {Gábor Csárdi},
+  year = {2022},
+  note = {R package version 0.1.2},
+  url = {https://gitcreds.r-lib.org/},
 }
 
 @Manual{R-globals,
@@ -1054,6 +1174,14 @@ ggplot2},
   url = {https://github.com/markvanderloo/gower},
 }
 
+@Manual{R-gplots,
+  title = {gplots: Various R Programming Tools for Plotting Data},
+  author = {Gregory R. Warnes and Ben Bolker and Lodewijk Bonebakker and Robert Gentleman and Wolfgang Huber and Andy Liaw and Thomas Lumley and Martin Maechler and Arni Magnusson and Steffen Moeller and Marc Schwartz and Bill Venables and Tal Galili},
+  year = {2024},
+  note = {R package version 3.2.0},
+  url = {https://github.com/talgalili/gplots},
+}
+
 @Manual{R-graphlayouts,
   title = {graphlayouts: Additional Layout Algorithms for Network Visualizations},
   author = {David Schoch},
@@ -1108,6 +1236,14 @@ ggplot2},
   year = {2024},
   note = {R package version 0.3.6},
   url = {https://gtable.r-lib.org},
+}
+
+@Manual{R-gtools,
+  title = {gtools: Various R Programming Tools},
+  author = {Gregory R. Warnes and Ben Bolker and Thomas Lumley and Arni Magnusson and Bill Venables and Genei Ryodan and Steffen Moeller},
+  year = {2023},
+  note = {R package version 3.9.5},
+  url = {https://github.com/r-gregmisc/gtools},
 }
 
 @Manual{R-hardhat,
@@ -1214,6 +1350,14 @@ ggplot2},
   url = {https://httr.r-lib.org/},
 }
 
+@Manual{R-httr2,
+  title = {httr2: Perform HTTP Requests and Process the Responses},
+  author = {Hadley Wickham},
+  year = {2025},
+  note = {R package version 1.1.0},
+  url = {https://httr2.r-lib.org},
+}
+
 @Manual{R-hwriter,
   title = {hwriter: HTML Writer - Outputs R Objects in HTML Format},
   author = {Gregoire Pau},
@@ -1236,6 +1380,14 @@ ggplot2},
   year = {2025},
   note = {R package version 2.1.4},
   url = {https://r.igraph.org/},
+}
+
+@Manual{R-ini,
+  title = {ini: Read and Write .ini Files},
+  author = {David Valentim Dias},
+  year = {2018},
+  note = {R package version 0.3.1},
+  url = {https://github.com/dvdscripter/ini},
 }
 
 @Manual{R-interp,
@@ -1566,6 +1718,14 @@ Estimation},
   url = {https://github.com/yihui/mime},
 }
 
+@Manual{R-miniUI,
+  title = {miniUI: Shiny UI Widgets for Small Screens},
+  author = {Joe Cheng},
+  year = {2018},
+  note = {R package version 0.1.1.1},
+  url = {https://CRAN.R-project.org/package=miniUI},
+}
+
 @Manual{R-minqa,
   title = {minqa: Derivative-Free Optimization Algorithms by Quadratic
 Approximation},
@@ -1755,6 +1915,14 @@ Methods for Test in Mixed Models},
   url = {https://github.com/r-lib/pkgconfig#readme},
 }
 
+@Manual{R-pkgdown,
+  title = {pkgdown: Make Static HTML Documentation for a Package},
+  author = {Hadley Wickham and Jay Hesselberth and Maëlle Salmon and Olivier Roy and Salim Brüggemann},
+  year = {2024},
+  note = {R package version 2.1.1},
+  url = {https://pkgdown.r-lib.org/},
+}
+
 @Manual{R-pkgload,
   title = {pkgload: Simulate Package Installation and Attach},
   author = {Hadley Wickham and Winston Chang and Jim Hester and Lionel Henry},
@@ -1803,6 +1971,14 @@ Methods for Test in Mixed Models},
   url = {https://www.angusj.com},
 }
 
+@Manual{R-polylabelr,
+  title = {polylabelr: Find the Pole of Inaccessibility (Visual Center) of a Polygon},
+  author = {Johan Larsson},
+  year = {2024},
+  note = {R package version 0.3.0},
+  url = {https://github.com/jolars/polylabelr},
+}
+
 @Manual{R-polynom,
   title = {polynom: A Collection of Functions to Implement a Class for Univariate
 Polynomial Manipulations},
@@ -1810,6 +1986,22 @@ Polynomial Manipulations},
   year = {2022},
   note = {R package version 1.4-1},
   url = {https://CRAN.R-project.org/package=polynom},
+}
+
+@Manual{R-praise,
+  title = {praise: Praise Users},
+  author = {Gabor Csardi and Sindre Sorhus},
+  year = {2015},
+  note = {R package version 1.0.0},
+  url = {https://github.com/gaborcsardi/praise},
+}
+
+@Manual{R-prettydoc,
+  title = {prettydoc: Creating Pretty Documents from R Markdown},
+  author = {Yixuan Qiu},
+  year = {2021},
+  note = {R package version 0.4.1},
+  url = {https://github.com/yixuan/prettydoc},
 }
 
 @Manual{R-prettyunits,
@@ -1842,6 +2034,14 @@ Polynomial Manipulations},
   year = {2024},
   note = {R package version 2024.06.25},
   url = {https://CRAN.R-project.org/package=prodlim},
+}
+
+@Manual{R-profvis,
+  title = {profvis: Interactive Visualizations for Profiling R Code},
+  author = {Hadley Wickham and Winston Chang and Javier Luraschi and Timothy Mastny},
+  year = {2024},
+  note = {R package version 0.4.0},
+  url = {https://profvis.r-lib.org},
 }
 
 @Manual{R-progress,
@@ -1962,8 +2162,8 @@ Results to Speed Up Computations},
 @Manual{R-R6,
   title = {R6: Encapsulated Classes with Reference Semantics},
   author = {Winston Chang},
-  year = {2021},
-  note = {R package version 2.5.1},
+  year = {2025},
+  note = {R package version 2.6.1},
   url = {https://r6.r-lib.org},
 }
 
@@ -1990,6 +2190,14 @@ and Logs},
   year = {2024},
   note = {R package version 2.3},
   url = {https://geobosh.github.io/rbibutils/},
+}
+
+@Manual{R-rcmdcheck,
+  title = {rcmdcheck: Run R CMD check from R and Capture Results},
+  author = {Gábor Csárdi},
+  year = {2021},
+  note = {R package version 1.4.0},
+  url = {https://r-lib.github.io/rcmdcheck/},
 }
 
 @Manual{R-RColorBrewer,
@@ -2207,6 +2415,14 @@ GitHub},
   doi = {10.18129/B9.bioc.Rhtslib},
 }
 
+@Manual{R-rJava,
+  title = {rJava: Low-Level R to Java Interface},
+  author = {Simon Urbanek},
+  year = {2024},
+  note = {R package version 1.0-11},
+  url = {http://www.rforge.net/rJava/},
+}
+
 @Manual{R-rlang,
   title = {rlang: Functions for Base Types and Core R and Tidyverse Features},
   author = {Lionel Henry and Hadley Wickham},
@@ -2281,6 +2497,22 @@ file import},
   url = {https://rstudio.github.io/rstudioapi/},
 }
 
+@Manual{R-RVenn,
+  title = {RVenn: Set Operations for Many Sets},
+  author = {Turgut Yigit Akyol},
+  year = {2019},
+  note = {R package version 1.1.0},
+  url = {https://CRAN.R-project.org/package=RVenn},
+}
+
+@Manual{R-rversions,
+  title = {rversions: Query R Versions, Including r-release and r-oldrel},
+  author = {Gábor Csárdi},
+  year = {2022},
+  note = {R package version 2.1.2},
+  url = {https://github.com/r-hub/rversions},
+}
+
 @Manual{R-rvest,
   title = {rvest: Easily Harvest (Scrape) Web Pages},
   author = {Hadley Wickham},
@@ -2324,6 +2556,15 @@ Bioconductor},
   doi = {10.18129/B9.bioc.S4Vectors},
 }
 
+@Manual{R-S7,
+  title = {S7: An Object Oriented System Meant to Become a Successor to S3 and
+S4},
+  author = {Davis Vaughan and Jim Hester and Tomasz Kalinowski and Will Landau and Michael Lawrence and Martin Maechler and Luke Tierney and Hadley Wickham},
+  year = {2024},
+  note = {R package version 0.2.0},
+  url = {https://rconsortium.github.io/S7/},
+}
+
 @Manual{R-sass,
   title = {sass: Syntactically Awesome Style Sheets (Sass)},
   author = {Joe Cheng and Timothy Mastny and Richard Iannone and Barret Schloerke and Carson Sievert},
@@ -2356,6 +2597,14 @@ Bioconductor},
   url = {https://sjp.co.nz/projects/selectr},
 }
 
+@Manual{R-sessioninfo,
+  title = {sessioninfo: R Session Information},
+  author = {Hadley Wickham and Winston Chang and Robert Flight and Kirill Müller and Jim Hester},
+  year = {2025},
+  note = {R package version 1.2.3},
+  url = {https://github.com/r-lib/sessioninfo#readme},
+}
+
 @Manual{R-sf,
   title = {sf: Simple Features for R},
   author = {Edzer Pebesma},
@@ -2370,6 +2619,14 @@ Bioconductor},
   year = {2024},
   note = {R package version 1.4.6.1},
   url = {https://CRAN.R-project.org/package=shape},
+}
+
+@Manual{R-shiny,
+  title = {shiny: Web Application Framework for R},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  year = {2024},
+  note = {R package version 1.10.0},
+  url = {https://shiny.posit.co/},
 }
 
 @Manual{R-ShortRead,
@@ -2403,6 +2660,14 @@ Bioconductor},
   year = {2021},
   note = {R package version 0.4-4},
   url = {https://CRAN.R-project.org/package=snow},
+}
+
+@Manual{R-sourcetools,
+  title = {sourcetools: Tools for Reading, Tokenizing and Parsing R Code},
+  author = {Kevin Ushey},
+  year = {2023},
+  note = {R package version 0.1.7-1},
+  url = {https://CRAN.R-project.org/package=sourcetools},
 }
 
 @Manual{R-sp,
@@ -2535,6 +2800,14 @@ Algorithms},
   year = {2025},
   note = {R package version 1.2.1},
   url = {https://github.com/r-lib/systemfonts},
+}
+
+@Manual{R-testthat,
+  title = {testthat: Unit Testing for R},
+  author = {Hadley Wickham},
+  year = {2025},
+  note = {R package version 3.2.3},
+  url = {https://testthat.r-lib.org},
 }
 
 @Manual{R-textshaping,
@@ -2671,6 +2944,22 @@ Browser},
   url = {https://r-quantities.github.io/units/},
 }
 
+@Manual{R-urlchecker,
+  title = {urlchecker: Run CRAN URL Checks from Older R Versions},
+  author = {{R Core team} and Jim Hester and Gábor Csárdi},
+  year = {2021},
+  note = {R package version 1.0.1},
+  url = {https://github.com/r-lib/urlchecker},
+}
+
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett and Andy Teucher},
+  year = {2024},
+  note = {R package version 3.1.0},
+  url = {https://usethis.r-lib.org},
+}
+
 @Manual{R-utf8,
   title = {utf8: Unicode Text Processing},
   author = {Patrick O. Perry},
@@ -2719,6 +3008,22 @@ Browser},
   url = {https://github.com/dusadrian/venn},
 }
 
+@Manual{R-VennDiagram,
+  title = {VennDiagram: Generate High-Resolution Venn and Euler Plots},
+  author = {Hanbo Chen},
+  year = {2022},
+  note = {R package version 1.7.3},
+  url = {https://CRAN.R-project.org/package=VennDiagram},
+}
+
+@Manual{R-venneuler,
+  title = {venneuler: Venn and Euler Diagrams},
+  author = {Lee Wilkinson},
+  year = {2024},
+  note = {R package version 1.1-4},
+  url = {https://www.rforge.net/venneuler/},
+}
+
 @Manual{R-viridis,
   title = {viridis: Colorblind-Friendly Color Maps for R},
   author = {Simon Garnier},
@@ -2741,6 +3046,22 @@ Browser},
   year = {2023},
   note = {R package version 1.6.5},
   url = {https://vroom.r-lib.org},
+}
+
+@Manual{R-waldo,
+  title = {waldo: Find Differences Between R Objects},
+  author = {Hadley Wickham},
+  year = {2024},
+  note = {R package version 0.6.1},
+  url = {https://waldo.r-lib.org},
+}
+
+@Manual{R-whisker,
+  title = {whisker: {{mustache}} for R, Logicless Templating},
+  author = {Edwin {de Jonge}},
+  year = {2022},
+  note = {R package version 0.4.1},
+  url = {https://github.com/edwindj/whisker},
 }
 
 @Manual{R-withr,
@@ -2781,6 +3102,14 @@ Browser},
   year = {2021},
   note = {R package version 1.0.5},
   url = {https://github.com/r-lib/xmlparsedata#readme},
+}
+
+@Manual{R-xopen,
+  title = {xopen: Open System Files, URLs, Anything},
+  author = {Gábor Csárdi and Fathi Boudra and Rex Dieter and Kevin Krammer and Jeremy White},
+  year = {2024},
+  note = {R package version 1.0.1},
+  url = {https://github.com/r-lib/xopen#readme},
 }
 
 @Manual{R-xtable,
@@ -3112,6 +3441,19 @@ Ordered Observations)},
   doi = {10.1093/bioinformatics/btu684},
 }
 
+@InProceedings{eulerr2018,
+  title = {A Case Study in Fitting Area-Proportional {{Euler}} Diagrams with Ellipses Using eulerr},
+  booktitle = {{Proceedings of {{International Workshop}} on {{Set Visualization}} and {{Reasoning}}}},
+  author = {Johan Larsson and Peter Gustafsson},
+  year = {2018},
+  month = {apr},
+  volume = {2116},
+  pages = {84--91},
+  publisher = {{{CEUR Workshop Proceedings}}},
+  address = {{{Edinburgh, United Kingdom}}},
+  url = {https://cran.r-project.org/package=eulerr},
+}
+
 @Article{fgsea2019,
   author = {Gennady Korotkevich and Vladimir Sukhov and Alexey Sergushichev},
   title = {Fast gene set enrichment analysis},
@@ -3177,6 +3519,15 @@ Ordered Observations)},
   issue = {8},
   doi = {10.1371/journal.pcbi.1003118},
   url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
+}
+
+@Article{GenSA2013,
+  title = {Generalized Simulated Annealing for Efficient GlobalOptimization: the GenSA Package for R.},
+  author = {Yang Xiang and Sylvain Gubian and Brian Suomela and Julia Hoeng},
+  year = {2013},
+  journal = {The R Journal},
+  volume = {5/1},
+  url = {https://journal.r-project.org},
 }
 
 @Book{ggplot22016,
@@ -3766,6 +4117,16 @@ likelihood estimation of semiparametric generalized linear models},
   publisher = {Springer},
   address = {New York},
   isbn = {0-387-98784-3},
+}
+
+@Article{testthat2011,
+  author = {Hadley Wickham},
+  title = {testthat: Get Started with Testing},
+  journal = {The R Journal},
+  year = {2011},
+  volume = {3},
+  pages = {5--10},
+  url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
 }
 
 @Book{tidytree2022,
