--- a/FAQ.qmd
+++ b/FAQ.qmd
@@ -1,4 +1,31 @@
-# 拾遗
+# FAQ
+
+## 找不到包，找不到函数，找不到文件
+
+> 这是每个人都常常会掉进去的坑。
+
+**找不到包怎么样？**
+
+在 R 语言中，如果使用 `library("package")` 后提示找不到包，那么说明该包没有安装成功。请参照 @sec-install-r 部分安装缺失的包。
+
+**找不到函数怎么办？**
+
+如下面的错误提示：`Error in read_csv("file") : could not find function "read_csv"`，说明函数对应的包还没有载入。使用 `library("readr")` 包载入即可使用。不同的函数来自于不同的包，如果不知道函数所在的包可以在 R 终端输入 `??read_csv` 查找函数所属的包（可能会有多个包提供相同名字的函数）。
+
+**找不到文件怎么办？**
+
+找不到文件通常是路径写得不对。在访问文件时，可以使用**相对路径**或**绝对路径**两种方式：  
+
+- **相对路径**是基于当前工作目录 (`getwd()`) 的路径。例如，如果你的文件 `data.xlsx` 在当前目录下，则可以用 `"data.xlsx"` 访问它；如果在 `data` 目录下，则使用 `"data/data.xlsx"`。相对路径更灵活，适用于在不同环境运行相同代码时无需修改路径。  
+
+- **绝对路径**是文件在系统中的完整路径，例如 `"/Users/username/project/data.xlsx"`（macOS/Linux）或 `"C:/Users/username/project/data.xlsx"`（Windows）。它不会受当前工作目录影响，但在不同设备或用户环境下必然需要调整。  
+
+在 R 中：
+
+- `list.files()`、`file.exists()` 和 `read_excel()` 等函数支持相对路径和绝对路径。  
+- 使用 `normalizePath("path")` 可将相对路径转换为绝对路径，避免路径混乱。  
+- `setwd("path")` 可更改当前工作目录，但通常不推荐在脚本中使用，以免影响其他代码的执行环境。
+
 
 ## 批量线性回归总表
 
