--- a/neural-network-from-scratch.qmd
+++ b/neural-network-from-scratch.qmd
@@ -21,7 +21,7 @@
 
 在开始代码实现之前，我们先介绍一些神经网络的基本概念和原理。
 
-<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113332711333508&bvid=BV1atCRYsE7x&cid=26360022345&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113332711333508&bvid=BV1atCRYsE7x&cid=26360022345&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="600px"></iframe>
 
 
 ### 什么是神经网络？
